# wasmday22

./: README.md
dotnet-guest/: App.cs  ConsoleHandler.cs  Interop.cs  RandomThingInterop.cs  WasmDayDotnet.csproj
dotnet-guest/native/: console-export.c  console.c  console.h  host-components.c  host-components.h  random-thing.c  random-thing.h
host/: Cargo.toml
host/src/: console.rs  main.rs  services.rs
rust-guest/: Cargo.toml
rust-guest/src/: lib.rs
slides/: Wasm Interfaces and .NET.pptx
wit/: console.wit  random-thing.wit
