[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
wasmtime = { version = "0.39.1", features = [ "async" ] }
wasmtime-wasi = "0.39.1"

[dependencies.wit-bindgen-wasmtime]
git = "https://github.com/bytecodealliance/wit-bindgen"
rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba"
features = ["async"]
